Fix section z-indexes
This change fixes the z-indexes of the <header> and <nav> sections,
so that the <nav> is on top, allowing the <header> box-shadow to render
correctly.

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 }
 
 header {
+  z-index: 1;
   padding: 20px 40px;
   background-color: var(--primary-background-color);
   box-shadow: 0px 3px 3px 0px var(--shadow-color);
@@ -84,6 +85,7 @@ header {
 }
 
 nav {
+  z-index: 2;
   color: var(--inverted-text-color);
   background-color: var(--primary-color);
   grid-area: nav;
